# video_editor_project

./: DEVELOPMENT_LOG.md  README.md  STABILITY_AUDIT.md
admin_panel/: .env.example  next.config.js  package.json
admin_panel/lib/: admin_auth.ts
ai_modules/: docker-compose.yml  nginx.conf
android/: video_editor.lnk
backend/: .env.example  package.json  serverless.yml
flutter_app/: README.md  build_log.txt  debug_log_1776342921582.txt  debug_runner.dart  pubspec.yaml
video_engine/: CMakeLists.txt
video_engine/shaders/: effects.glsl  effects.metal  fade.glsl  transitions.glsl
video_engine/src/: engine_ffi.cpp
video_engine/src/ai_modules/: ai_bridge.cpp
video_engine/src/ai_modules/beat_sync/: bpm_detector.cpp  bpm_detector.h
video_engine/src/ai_modules/cut_detection/: scene_detector.cpp  scene_detector.h
video_engine/src/ai_modules/subtitle/: subtitle_engine.cpp  subtitle_engine.h
video_engine/src/ai_modules/tracking/: object_tracker.cpp  object_tracker.h
video_engine/src/animation/: keyframe_engine.cpp  keyframe_engine.h
video_engine/src/audio/: audio_mixer.cpp  audio_mixer.h
video_engine/src/compositor/: compositor.cpp  compositor.h  layer_compositor.cpp  layer_compositor.h
video_engine/src/core/pipeline/: frame_pipeline.h  render_state_machine.h
video_engine/src/core/threading/: lock_manager.cpp  thread_pool.cpp
video_engine/src/effects/: effect_manager.h
video_engine/src/renderer/: gl_renderer.cpp  gl_renderer.h
video_engine/src/timeline/: command_parser.cpp  command_parser.h
video_engine/src/transitions/: transition_engine.cpp
(+220 files in other folders)
